<resources>
    <string name="app_name">Digital bursar</string>
    <string name="paddingDefault">8dp</string>
    <string name="withdraw_money">Withdraw money</string>
    <string name="view_statement">View statement</string>
    <string name="hello">Hello!</string>
    <string name="ugx">UGX:</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="please_enter_your_password_before_you_can_proceed">Please enter your password before you can proceed</string>
    <string name="please_wait_while_we_verify_your_password">please wait while we verify your account</string>
    <string name="cares_about_your_security">cares about your security</string>
    <string name="balance">My balance</string>
    <string name="balance_placeholder">$5674</string>
    <string name="student">Student</string>
    <string name="welcome">Welcome</string>
    <string name="last_transaction">Last transaction</string>
    <string name="last_transaction_placeholder">$20</string>
    <string name="transaction_date_placeholder">14 Dec 2019 - 22:23</string>
    <string name="enter_amount">Enter amount you wish to withdraw</string>
    <string name="enter_amount_you_wish_to_request">Enter amount you wish to request</string>
    <string name="transactions">Transactions</string>
    <string name="send_money_to">Send money to</string>
    <string name="view_all">View all</string>
    <string name="child_name">child name</string>
    <string name="send_to_someone_new">Send to someone new</string>
    <string name="recently_added">Recently added</string>
    <string name="confirm_selected">Confirm selected</string>
    <string name="how_much_would_you_like_to_send">How much would you like to send?</string>
    <string name="enter_amount_here">Enter amount here</string>
    <string name="add_child">Add child</string>
    <string name="send_money">Send money</string>
    <string name="oops">Oops!</string>
    <string name="try_again">Try again</string>
    <string name="enter_child_name_here">Enter child name here</string>
    <string name="new_child">new child</string>
</resources>
