<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hello"
                            android:textSize="24sp"
                            android:textStyle="bold|italic"
                            android:paddingEnd="8dp"
                            android:paddingStart="0dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Daniel"
                            android:textSize="24sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/cardwithshadow"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ugx"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="15,000" />
                    </LinearLayout>
<!--                    <android.support.v7.widget.CardView-->
<!--                        xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
<!--                        android:id="@+id/card_view"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        card_view:cardCornerRadius="4dp">-->

<!--                        <TextView-->
<!--                            android:id="@+id/info_text"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="match_parent" />-->
<!--                    </android.support.v7.widget.CardView>-->
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/btn_withdraw"
                    android:text="@string/withdraw_money"
                    android:padding="20dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/textPrimary"
                    android:textSize="30sp"
                    android:layout_marginBottom="16dp"
                    android:elevation="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:text="@string/view_statement"
                    android:padding="20dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/textPrimary"
                    android:textSize="30sp"
                    android:layout_marginBottom="16dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>