<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/strip_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:scrollbarSize="0dp" >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/appname"
                            android:text="@string/appname"
                            android:textSize="12sp"
                            android:textAllCaps="true"
                            android:textColor="@color/white"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="95dp"
                                android:layout_height="95dp"
                                android:background="@drawable/circler_bg"
                                android:src="@drawable/transactions_icon_nobg" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/transactions"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:textSize="18sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:translationY="-12dp">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center_horizontal"
                                android:paddingStart="16dp"
                                android:paddingEnd="10dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/hello"
                                    android:textSize="24sp"
                                    android:textStyle="bold|italic"
                                    android:textColor="@color/white"
                                    android:paddingEnd="8dp"
                                    android:paddingStart="0dp"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Daniel"
                                    android:textColor="@color/white"
                                    android:textStyle="italic"
                                    android:textSize="24sp" />
                            </LinearLayout>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@drawable/line"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:gravity="center_horizontal">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="0772649119"
                                    android:textSize="16sp"
                                    android:textStyle="bold|italic"
                                    android:textColor="@color/colorBlue"
                                    android:paddingEnd="0dp"
                                    android:paddingStart="8dp"/>
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:elevation="8dp"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="6dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/cardwithshadow">
                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/balance"
                                android:textStyle="bold"
                                android:textSize="18sp"
                                android:layout_weight="1"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tv_my_balance"
                                android:text="@string/balance_placeholder"
                                android:textStyle="bold"
                                android:textSize="24sp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingBottom="8dp">
                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/transactions_list" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>